--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <title>BTAD docs</title>
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://avitech-vnu.github.io/BTAD/" />
+    <meta property="og:url" content="https://avitech-vnu.github.io/BTAT/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="BTAD docs" />
-    <meta property="og:description" content="BTAD docs" />
+    <meta property="og:title" content="BTAT docs" />
+    <meta property="og:description" content="BTAT docs" />
     <meta
       property="og:image"
       content=""
