rename: BTAD -> BTAT

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no, viewport-fit=cover"
     />
-    <meta name="description" content="InSI docs" />
+    <meta name="description" content="BTAT docs" />
     <meta
       name="google-site-verification"
       content="azd82SkDVR9jVXnOjCFDfHYixBoeTj5DB4BLzinzsfQ"
     />
-    <title>BTAD docs</title>
+    <title>BTAT docs</title>
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://avitech-vnu.github.io/BTAT/" />
@@ -115,7 +115,7 @@
           whereToPlace: "bottom", // "top" or "bottom", default to "bottom"
         },
         footer: {
-          copy: "<span><b>BTAD</b> &copy; 2024</span>.",
+          copy: "<span><b>BTAT</b> &copy; 2024</span>.",
           auth: "<div class='footer'> <div class='row'> <div class='column'> <a href='https://uet.vnu.edu.vn' target='_blank' ><img src='./assets/img/VNU_UET.png' style='max-width: 90px' /></a> </div> <div class='column'> <img src='./assets/img/UTS.png' style='max-width: 110px'/> </div> <div class='column'> <a href='https://avitech.uet.vnu.edu.vn/' target='_blank' ><img src='./assets/img/avitech.png' style='max-width: 110px' /></a> </div> </div> </div>",
           pre: "<hr/>",
           style: "text-align: center;",
